# apertium-stats-service

./: .dockerignore  .env  .gitignore  .gitmodules  .rustfmt.toml  .travis.yml  Cargo.toml  Dockerfile  README.md  api.html  build.rs  db.sqlite.bak  docker-compose.yml  index.html  iso639.tsv  openapi.yaml
.github/workflows/: check.yml  publish.yml  test.yml
migrations/2018-03-10-232513_create_entries/: down.sql  up.sql
migrations/2018-05-07-020144_add_changed_author_date_to_entries/: down.sql  up.sql
migrations/2018-12-04-064410_add_sha_to_entries/: up.sql
migrations/2018-12-04-064410_added_sha_to_table/: down.sql
migrations/2019-12-17-065658_coerce_rule_count_to_integer/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  schema.rs  stats.rs  tests.rs  util.rs  worker.rs
src/graphql/: packages_query.graphql  repos.graphql  schema.json
src/stats/: lexc.rs  lexd.rs  mod.rs  rlx.rs  xml.rs
src/tests/: common.rs  get.rs  mod.rs  post.rs
src/tests/fixtures/: package_listing.jsonl
