[package]
name = "apertium-stats-service"
version = "0.1.0"
authors = ["Sushain Cherivirala <sushain@skc.name>"]
repository = "https://github.com/apertium/apertium-stats-service"
readme = "README.md"
license = "GPLv3"
edition = "2018"

[dependencies]
chrono = { version = "0.4.2", features = ["serde"] }
diesel = { version = "1.4.4", features = ["sqlite", "serde_json", "chrono", "r2d2"] }
diesel-derive-enum = { version = "1.0.0", features = ["sqlite"] }
dotenv = "0.11.0"
failure = "0.1.4"
futures = "0.3.0"
graphql_client = "0.9.0"
hyper = "0.12.14"
hyper-tls = "0.3.0"
lazy_static = "1.2.0"
quick-xml = "0.12.1"
regex = "1.0.0"
reqwest = { version = "0.10.0", features = ["json"] }
rocket = "0.4.7"
rocket_contrib = { version = "0.4.0", default-features = false, features = ["json"] }
rocket_cors = "0.4.0-rc.3"
serde = "1.0.45"
serde_derive = "1.0.45"
serde_json = "1.0.17"
slog = "2.2.3"
slog-async = "2.3.0"
slog-envlogger = "2.1.0"
slog-term = "2.4.0"
tempfile = "3.0.1"
tokio = "0.1.11"
tokio-process = "0.2.3"

[dev-dependencies]
diesel_cli = { version = "1.4.1", default-features = false, features = ["sqlite"] }
